@@ -28,26 +28,26 @@ is $collection->find_one($oids->[0])->{foo}, 'bar', 'right value';
 is $collection->find_one($oids->[1])->{foo}, 'baz', 'right value';
 
 # Update documents blocking
-is $collection->update({}, {'$set' => {bar => 'works'}}, {multi => 1})->{n},
-  2, 'two documents updated';
-is $collection->update({}, {'$set' => {baz => 'too'}})->{n}, 1,
+is $collection->update({}, {'$set' => {bar => 'works'}}, {multi => 1}), 2,
+  'two documents updated';
+is $collection->update({}, {'$set' => {baz => 'too'}}), 1,
   'one document updated';
 is $collection->find_one($oids->[0])->{bar}, 'works', 'right value';
 is $collection->find_one($oids->[1])->{bar}, 'works', 'right value';
-is $collection->update({missing => 1}, {now => 'there'}, {upsert => 1})->{n},
-  1, 'one document updated';
-is $collection->update({missing => 1}, {now => 'there'}, {upsert => 1})->{n},
-  1, 'one document updated';
-is $collection->remove({now => 'there'}, {single => 1})->{n}, 1,
+is $collection->update({missing => 1}, {now => 'there'}, {upsert => 1}), 1,
+  'one document updated';
+is $collection->update({missing => 1}, {now => 'there'}, {upsert => 1}), 1,
+  'one document updated';
+is $collection->remove({now => 'there'}, {single => 1}), 1,
   'one document removed';
-is $collection->remove({now => 'there'}, {single => 1})->{n}, 1,
+is $collection->remove({now => 'there'}, {single => 1}), 1,
   'one document removed';
 
 # Remove one document blocking
-is $collection->remove({foo => 'baz'})->{n}, 1, 'one document removed';
+is $collection->remove({foo => 'baz'}), 1, 'one document removed';
 ok $collection->find_one($oids->[0]), 'document still exists';
 ok !$collection->find_one($oids->[1]), 'no document';
-is $collection->remove->{n}, 1, 'one document removed';
+is $collection->remove, 1, 'one document removed';
 ok !$collection->find_one($oids->[0]), 'no document';
 
 # Find and modify document blocking
@@ -57,7 +57,7 @@ my $doc = $collection->find_and_modify(
   {query => {atomic => 1}, update => {'$set' => {atomic => 2}}});
 is $doc->{atomic}, 1, 'right document';
 is $collection->find_one($oid)->{atomic}, 2, 'right document';
-is $collection->remove({atomic => 2})->{n}, 1, 'removed one document';
+is $collection->remove({atomic => 2}), 1, 'removed one document';
 
 # Find and modify document non-blocking
 $oid = $collection->insert({atomic => 1});
@@ -76,14 +76,14 @@ ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 is $result->{atomic}, 1, 'right document';
 is $collection->find_one($oid)->{atomic}, 2, 'right document';
-is $collection->remove({atomic => 2})->{n}, 1, 'removed one document';
+is $collection->remove({atomic => 2}), 1, 'removed one document';
 
 # Aggregate collection blocking
 $collection->insert([{more => 1}, {more => 2}, {more => 3}]);
 my $docs = $collection->aggregate(
   [{'$group' => {_id => undef, total => {'$sum' => '$more'}}}]);
 is $docs->[0]{total}, 6, 'right result';
-is $collection->remove({more => {'$exists' => 1}})->{n}, 3,
+is $collection->remove({more => {'$exists' => 1}}), 3,
   'three documents removed';
 
 # Aggregate collection non-blocking
@@ -101,7 +101,7 @@ Mojo::IOLoop->start;
 ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 is $result->[0]{total}, 6, 'right result';
-is $collection->remove({more => {'$exists' => 1}})->{n}, 3,
+is $collection->remove({more => {'$exists' => 1}}), 3,
   'three documents removed';
 
 # Save document blocking
@@ -112,13 +112,13 @@ $doc->{update} = 'too';
 is $collection->save($doc), $oid, 'same object id';
 $doc = $collection->find_one($oid);
 is $doc->{update}, 'too', 'right document';
-is $collection->remove({_id => $oid})->{n}, 1, 'one document removed';
+is $collection->remove({_id => $oid}), 1, 'one document removed';
 $oid = bson_oid;
 $doc = bson_doc _id => $oid, save => 'me';
 is $collection->save($doc), $oid, 'same object id';
 $doc = $collection->find_one($oid);
 is $doc->{save}, 'me', 'right document';
-is $collection->remove({_id => $oid})->{n}, 1, 'one document removed';
+is $collection->remove({_id => $oid}), 1, 'one document removed';
 
 # Save document non-blocking
 $fail = $result = undef;
@@ -152,7 +152,7 @@ ok !$fail, 'no error';
 is $oid, $result, 'same object id';
 $doc = $collection->find_one($oid);
 is $doc->{update}, 'too', 'right document';
-is $collection->remove({_id => $oid})->{n}, 1, 'one document removed';
+is $collection->remove({_id => $oid}), 1, 'one document removed';
 $oid  = bson_oid;
 $doc  = bson_doc _id => $oid, save => 'me';
 $fail = $result = undef;
@@ -170,7 +170,7 @@ ok !$fail, 'no error';
 is $oid, $result, 'same object id';
 $doc = $collection->find_one($oid);
 is $doc->{save}, 'me', 'right document';
-is $collection->remove({_id => $oid})->{n}, 1, 'one document removed';
+is $collection->remove({_id => $oid}), 1, 'one document removed';
 
 # Drop collection blocking
 $oid = $collection->insert({just => 'works'});
